# marqant

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  INDEX.md  LICENSE  MARQANT_SPECIFICATION.md  README.md  SEMANTIC_VISION.md  examples  ship-it.sh
example-md/: ARCHITECTURE.md  MEM8_summary.tex  QUICK_REFERENCE.md
examples/: novelty_demo.rs  semantic_demo.rs
mq2-uni/: Cargo.toml  README.md
mq2-uni/src/: lib.rs
src/: dns.rs  lib.rs  main.rs  novelty.rs  semantic.rs  uni.rs
tests/: dns.rs  emoji_test.rs  errors.rs  flags.rs  golden.rs  meta.rs  roundtrip_folder.rs  std.rs  thank_you_jp.rs  tokenize.rs  wordcloud.rs
tests/snapshots/: mq_basic.snap
